[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/checkpoint_pylon.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/LeakCheckpoint.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/pylon/Middle Pole.PNG" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 18.5 )

[node name="LeakCheckpoint" type="Node2D"]
script = ExtResource( 2 )

[node name="PylonArea" type="Area2D" parent="."]

[node name="Sprite2" type="Sprite" parent="PylonArea"]
position = Vector2( 6, 38 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="PylonArea"]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PylonArea"]
position = Vector2( -1, 5.5 )
shape = SubResource( 1 )

[node name="LinePositionFixTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="area_entered" from="PylonArea" to="." method="_on_PylonArea_area_entered"]
[connection signal="timeout" from="LinePositionFixTimer" to="." method="_on_LinePositionFixTimer_timeout"]
